# WebVerse

./: README.md  apiverse.py  install.sh  pyproject.toml
labs/harborledger/: docker-compose.yml  lab.yml
labs/harborledger/app/: main.py
labs/harborledger/app/static/: app.bundle.js  app.bundle.js.map
labs/harborledger/app/templates/: dashboard.html  imports.html  invite_accept.html  layout.html  login.html  portal_index.html
labs/pixel-pivot/: docker-compose.yml  lab.yml
labs/pixel-pivot/chat/: main.py
labs/pixel-pivot/chat/static/: chat.css
labs/pixel-pivot/chat/templates/: base.html  chat.html  login.html
labs/pixel-pivot/gitea/: main.py
labs/pixel-pivot/gitea/static/: gitea.css
labs/pixel-pivot/gitea/templates/: base.html  commit_view.html  commits.html  home.html  login.html  repo.html
labs/pixel-pivot/internal_api/: Dockerfile  flag.txt  main.py
labs/pixel-pivot/proxy/: nginx.conf
labs/pixel-pivot/web/: main.py
labs/pixel-pivot/web/static/: app.css
labs/tricky-tunnels/: docker-compose.yml  lab.yml
labs/tricky-tunnels/app/: Dockerfile  README.md  main.py
labs/zipline/: docker-compose.yml  lab.yml
labs/zipline/internal_api/: main.py  requirements.txt
labs/zipline/public/: Dockerfile  main.py  requirements.txt
labs/zipline/router/: main.py  requirements.txt
src/webverse/: __init__.py
src/webverse/core/: models.py  progress_db.py  registry.py  remote_labs.py  updater.py  usercounter.py
src/webverse/gui/: app_state.py  main_window.py  resources.py  sidebar.py  theme.py  util_avatar.py
src/webverse/gui/dialogs/: __init__.py  (+1 more)
(+264 files in other folders)
